# DoSSA-Lab-1

./: .gitignore  CMakeLists.txt  REPORT.md
Lab1/HeaderFiles/: CEcoLab1.h  CEcoLab1ConnectionPoint.h  CEcoLab1Sink.h
Lab1/SharedFiles/: IEcoConnectionPoint.h  IEcoConnectionPointContainer.h  IEcoEnumConnectionPoints.h  IEcoEnumConnections.h  IEcoLab1.h  IEcoLab1Events.h  IdEcoLab1.h
Lab1/SourceFiles/: CEcoLab1.c  CEcoLab1Sink.c
Lab2/HeaderFiles/: CEcoLab2.h  CEcoLab2Factory.h
Lab2/SharedFiles/: IdEcoLab2.h
Lab2/SourceFiles/: CEcoLab2.c  CEcoLab2Factory.c
UnitTest/: EcoLab1.c  EcoLab2.c
UnitTest/SourceFiles/: CEcoLab1Sink.c  EcoLab1.c  EcoLab3.c
